# iot-device

./: Cargo.toml  memory.x
.cargo/: config.toml
src/: allocator.rs  main.rs  networking.rs  serial.rs
src/networking/: network_config.rs
src/serial/: print.rs
